--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,8 +40,8 @@
             chart.data.datasets[0].data.push(data.ping);
 
             if (chart.data.labels.length > 20) {
-                chart.data.labels.shift();
-                chart.data.datasets[0].data.shift();
+              chart.data.labels = chart.data.labels.slice(10);
+              chart.data.datasets[0].data = chart.data.datasets[0].data.slice(10);
             }
 
             chart.update();
